@@ -1,3 +1,6 @@
+[B]1.3.5[/B]
+Added: Chinese translation
+
 [B]1.3.4[/B]
 Fixed: MusicBrainz reverted back previous API layout changes so scraper needs to be reverted too
 
